deploy/vmce/networking/psolabs-vmce-networking-destination-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: psolabs-vmce-webapp
spec:
  host: psolabs-vmce-webapp.psolabs-vmce.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
---
