deploy/vmce/networking/psolabs-vmce-networking-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: psolabs-vmce-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: psolabs-vmce-webapp
spec:
  hosts:
  - "*"
  gateways:
  - psolabs-vmce-gateway
  http:
  - match:
    - uri:
        exact: /vmce
    - uri:
        exact: /hello
    route:
    - destination:
        host: psolabs-vmce-webapp.psolabs-vmce.svc.cluster.local
        port:
          number: 8080
---
